[gd_scene load_steps=23 format=2]

[ext_resource path="res://Lance.gd" type="Script" id=1]
[ext_resource path="res://sprites/spark.png" type="Texture" id=2]
[ext_resource path="res://sprites/lance.png" type="Texture" id=3]
[ext_resource path="res://sounds/jump.wav" type="AudioStream" id=4]
[ext_resource path="res://sounds/flap.wav" type="AudioStream" id=5]
[ext_resource path="res://sounds/land.wav" type="AudioStream" id=6]
[ext_resource path="res://sounds/drop.wav" type="AudioStream" id=7]
[ext_resource path="res://sounds/ouch.wav" type="AudioStream" id=8]
[ext_resource path="res://sounds/burn.wav" type="AudioStream" id=9]
[ext_resource path="res://sounds/shock.wav" type="AudioStream" id=10]
[ext_resource path="res://sounds/hit.wav" type="AudioStream" id=11]
[ext_resource path="res://sounds/attack.wav" type="AudioStream" id=12]
[ext_resource path="res://sounds/deflect.wav" type="AudioStream" id=13]
[ext_resource path="res://sounds/door.wav" type="AudioStream" id=14]
[ext_resource path="res://sounds/splash.wav" type="AudioStream" id=15]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 1, 1, 1, 0.121569, 1, 1, 1, 0 )

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=3]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 1 ]
}

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5, 6, 7, 8, 9, 10, 11, 12 ]
}

[sub_resource type="CapsuleShape2D" id=6]
radius = 4.0
height = 4.0

[sub_resource type="RayShape2D" id=7]
length = 10.0

[node name="Lance" type="KinematicBody2D" groups=[
"player",
]]
collision_layer = 2
script = ExtResource( 1 )

[node name="AttackTrail" type="CPUParticles2D" parent="."]
emitting = false
amount = 16
lifetime = 0.5
local_coords = false
texture = ExtResource( 2 )
gravity = Vector2( 0, 0 )
color_ramp = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )
hframes = 13
frame = 1
region_rect = Rect2( 96, 0, 32, 32 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fall = SubResource( 2 )
anims/flap = SubResource( 3 )
anims/idle = SubResource( 4 )
anims/walk = SubResource( 5 )

[node name="Jump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0
bus = "SFX"

[node name="Flap" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -15.0
bus = "SFX"

[node name="Land" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = -10.0
bus = "SFX"

[node name="Drop" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = -10.0
bus = "SFX"

[node name="Ouch" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
bus = "SFX"

[node name="Burned" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
bus = "SFX"

[node name="Shocked" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )
volume_db = -5.0
bus = "SFX"

[node name="Hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )
volume_db = -10.0
bus = "SFX"

[node name="Attack" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 12 )
volume_db = -5.0
bus = "SFX"

[node name="ShieldHit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 13 )
volume_db = -10.0
bus = "SFX"

[node name="Door" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 14 )
volume_db = -6.0
bus = "SFX"

[node name="Splash" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 15 )
volume_db = -2.0
bus = "SFX"

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
current = true
smoothing_enabled = true
drag_margin_left = 0.1
drag_margin_top = 0.3
drag_margin_right = 0.1
drag_margin_bottom = 0.0

[node name="BodyCollisionShape" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2 )
shape = SubResource( 6 )

[node name="RayCollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource( 7 )

[node name="DebugStuff" type="Node2D" parent="."]
visible = false
position = Vector2( 0, 3 )

[node name="DebugVelocityLine" type="Line2D" parent="DebugStuff"]
position = Vector2( 0, -3 )
points = PoolVector2Array( 0, 0, 0, 50 )
width = 2.0
default_color = Color( 1, 0.4, 0.4, 1 )
texture_mode = 3080292

[node name="DebugVelocityLine2" type="Line2D" parent="DebugStuff"]
position = Vector2( 0, -3 )
points = PoolVector2Array( 0, 0, 0, 50 )
width = 2.0

[node name="HitstunLine" type="Line2D" parent="DebugStuff"]
position = Vector2( 0, -3 )
points = PoolVector2Array( 0, 0, 0, 50 )
width = 2.0
default_color = Color( 0.827451, 1, 0, 1 )

[node name="DebugVelocityLabel" type="Label" parent="DebugStuff"]
margin_left = -22.0
margin_top = -29.0
margin_right = 23.0
margin_bottom = -15.0
text = "banana"
valign = 2
